--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -25,6 +25,7 @@ patchesStrategicMerge:
   - deployment-args.yaml
   - deployment-metrics-port.yaml
   - deployment-labels.yaml
+  - deployment-pss.yaml
   - delete-capi-system-ns.yaml
   - delete-capi-kubeadm-control-plane-system-ns.yaml
   - delete-capi-kubeadm-bootstrap-system-ns.yaml
