--- a/.github/workflows/zz_generated.add-team-labels.yaml
+++ b/.github/workflows/zz_generated.add-team-labels.yaml
@@ -1,4 +1,4 @@
-name: Add Issue to Project when assigned
+name: Add appropriate labels to issue
 
 on:
   issues:
@@ -9,14 +9,14 @@ jobs:
     name: Get yaml config of GS users
     runs-on: ubuntu-latest
     steps:
-    - name: Fetch issue templates
+    - name: Get user-mapping
       run: |
         mkdir -p artifacts
-        wget --header "Authorization: token ${{ github.token }}" \
+        wget --header "Authorization: token ${{ secrets.ISSUE_AUTOMATION }}" \
           -O artifacts/users.yaml \
-          https://raw.githubusercontent.com/giantswarm/github/master/tools/issue-automation/user-mapping.yaml
+          https://raw.githubusercontent.com/giantswarm/github/main/tools/issue-automation/user-mapping.yaml
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: users
         path: artifacts/users.yaml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_user_list
     steps:
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       id: download-users
       with:
         name: users
@@ -45,9 +45,9 @@ jobs:
         done
         echo "EOF" >> $GITHUB_ENV
     - name: Apply label to issue
-      if: ${{ env.LABEL != '' }}
+      if: ${{ env.LABEL != '' && env.LABEL != 'null' && env.LABEL != null }}
       uses: actions-ecosystem/action-add-labels@v1
       with:
-        github-token: ${{ secrets.ISSUE_AUTOMATION }}
+        github_token: ${{ secrets.ISSUE_AUTOMATION }}
         labels: |
           ${{ env.LABEL }}
