Chart: Replace Cilium network policies by native ones.

--- a/config/helm/bases/networkpolicies/capi-controller-manager.yaml
+++ b/config/helm/bases/networkpolicies/capi-controller-manager.yaml
@@ -15,10 +15,7 @@ spec:
   policyTypes:
   - Egress
   egress:
-  - to:
-    - ipBlock:
-        cidr: 0.0.0.0/0
-    ports:
+  - ports:
     - protocol: TCP
       port: 443
     - protocol: TCP
