--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
@@ -41,7 +41,7 @@ spec:
         - --v=0
         command:
         - /manager
-        image: '{{ .Values.images.domain }}/{{ .Values.images.bootstrap.name }}:{{
+        image: '{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}:{{
           .Values.images.bootstrap.tag | default .Values.images.tag }}'
         imagePullPolicy: IfNotPresent
         livenessProbe:
