--- a/helm/cluster-api/templates/apps_v1_deployment_capi-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-controller-manager.yaml
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
+    application.giantswarm.io/branch: '{{ .Values.project.branch }}'
+    application.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/component: cluster-api
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
@@ -23,8 +23,8 @@ spec:
   template:
     metadata:
       labels:
-        app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-        app.giantswarm.io/commit: '{{ .Values.project.commit }}'
+        application.giantswarm.io/branch: '{{ .Values.project.branch }}'
+        application.giantswarm.io/commit: '{{ .Values.project.commit }}'
         app.kubernetes.io/instance: '{{ .Release.Name }}'
         app.kubernetes.io/managed-by: '{{ .Release.Service }}'
         app.kubernetes.io/name: cluster-api
