--- a/helm/cluster-api/templates/networking.k8s.io_v1_networkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
+++ b/helm/cluster-api/templates/networking.k8s.io_v1_networkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
+    application.giantswarm.io/branch: '{{ .Values.project.branch }}'
+    application.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/component: control-plane-kubeadm
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
