--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -18,8 +18,8 @@ labels:
 - pairs:
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
-    app.giantswarm.io/branch: "{{ .Values.project.branch }}"
-    app.giantswarm.io/commit: "{{ .Values.project.commit }}"
+    application.giantswarm.io/branch: "{{ .Values.project.branch }}"
+    application.giantswarm.io/commit: "{{ .Values.project.commit }}"
     app.kubernetes.io/instance: "{{ .Release.Name }}"
     app.kubernetes.io/managed-by: "{{ .Release.Service }}"
     helm.sh/chart: cluster-api
