--- a/helm/cluster-api/files/core/bases/clusterclasses.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/clusterclasses.cluster.x-k8s.io.yaml
@@ -5,12 +5,12 @@ metadata:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
     controller-gen.kubebuilder.io/version: v0.11.4
   labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+    application.giantswarm.io/branch: '{{ .Values.project.branch }}'
+    application.giantswarm.io/commit: '{{ .Values.project.commit }}'
     cluster.x-k8s.io/provider: cluster-api
     clusterctl.cluster.x-k8s.io: ""
     clusterctl.cluster.x-k8s.io/move: ""
