--- a/helm/cluster-api/templates/apps_v1_deployment_capi-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-controller-manager.yaml
@@ -2,13 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/component: cluster-api
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+    application.giantswarm.io/branch: '{{ .Values.project.branch }}'
+    application.giantswarm.io/commit: '{{ .Values.project.commit }}'
     cluster.x-k8s.io/provider: cluster-api
     control-plane: controller-manager
     helm.sh/chart: cluster-api
@@ -23,12 +23,12 @@ spec:
   template:
     metadata:
       labels:
-        app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-        app.giantswarm.io/commit: '{{ .Values.project.commit }}'
         app.kubernetes.io/instance: '{{ .Release.Name }}'
         app.kubernetes.io/managed-by: '{{ .Release.Service }}'
         app.kubernetes.io/name: cluster-api
         app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+        application.giantswarm.io/branch: '{{ .Values.project.branch }}'
+        application.giantswarm.io/commit: '{{ .Values.project.commit }}'
         cluster.x-k8s.io/provider: cluster-api
         control-plane: controller-manager
         helm.sh/chart: cluster-api
