--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrolebinding_capi-manager-rolebinding.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrolebinding_capi-manager-rolebinding.yaml
@@ -2,12 +2,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+    application.giantswarm.io/branch: '{{ .Values.project.branch }}'
+    application.giantswarm.io/commit: '{{ .Values.project.commit }}'
     cluster.x-k8s.io/provider: cluster-api
     helm.sh/chart: cluster-api
   name: capi-manager-rolebinding
