--- a/config/helm/patches/deployments/capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/config/helm/patches/deployments/capi-kubeadm-bootstrap-controller-manager.yaml
@@ -8,6 +8,14 @@ metadata:
 spec:
   template:
     spec:
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - preference:
+              matchExpressions:
+              - key: node-role.kubernetes.io/control-plane
+                operator: Exists
+            weight: 10
       containers:
       - name: manager
         args:
@@ -19,3 +27,9 @@ spec:
         - name: metrics
           protocol: TCP
           containerPort: 8080
+      tolerations:
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/control-plane
+      - effect: NoSchedule
+        key: "node.cluster.x-k8s.io/uninitialized"
+        operator: "Exists"
