--- a/helm/cluster-api/files/core/bases/machinesets.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machinesets.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.11.4
+    controller-gen.kubebuilder.io/version: v0.12.0
   labels:
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
@@ -58,7 +58,7 @@ spec:
       deprecated: true
       name: v1alpha3
       schema: {}
-      served: true
+      served: false
       storage: false
       subresources:
         scale:
