--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
@@ -62,7 +62,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.uid
-        image: '{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}:{{ .Values.images.bootstrap.tag | default .Values.images.tag }}'
+        image: '{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}:{{
+          .Values.images.bootstrap.tag | default .Values.images.tag }}'
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
