--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -8,6 +8,10 @@ resources:
 - bases/networkpolicies/capi-controller-manager.yaml
 - bases/networkpolicies/capi-kubeadm-bootstrap-controller-manager.yaml
 - bases/networkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
+# Cilium network policies
+- bases/ciliumnetworkpolicies/capi-controller-manager.yaml
+- bases/ciliumnetworkpolicies/capi-kubeadm-bootstrap-controller-manager.yaml
+- bases/ciliumnetworkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
 # Watch filter configmap
 - bases/configmaps/watch-filter.yaml
 
