--- a/helm/cluster-api/files/core/kustomization.yaml
+++ b/helm/cluster-api/files/core/kustomization.yaml
@@ -90,7 +90,19 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: ipaddressclaims.ipam.cluster.x-k8s.io
+  - path: patches/versions/v1beta1/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: ipaddressclaims.ipam.cluster.x-k8s.io
   - path: patches/versions/v1alpha1/ipaddresses.ipam.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: ipaddresses.ipam.cluster.x-k8s.io
+  - path: patches/versions/v1beta1/ipaddresses.ipam.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
