--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
@@ -45,6 +45,7 @@
                   description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                   type: object
               type: object
+              x-kubernetes-map-type: atomic
             resources:
               description: Resources is a list of Secrets/ConfigMaps where each contains 1 or more resources to be applied to remote clusters.
               items:
