--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,7 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+            branches:
+              ignore:
+                - main
+                - master
