--- a/config/helm/bases/networkpolicies/capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/config/helm/bases/networkpolicies/capi-kubeadm-bootstrap-controller-manager.yaml
@@ -13,7 +13,10 @@ spec:
       cluster.x-k8s.io/provider: bootstrap-kubeadm
       control-plane: controller-manager
   policyTypes:
+  - Ingress
   - Egress
+  ingress:
+  - {}
   egress:
   - ports:
     - protocol: TCP
