--- a/helm/cluster-api/templates/networking.k8s.io_v1_networkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/helm/cluster-api/templates/networking.k8s.io_v1_networkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
@@ -21,9 +21,12 @@ spec:
       protocol: TCP
     - port: 6443
       protocol: TCP
+  ingress:
+  - {}
   podSelector:
     matchLabels:
       cluster.x-k8s.io/provider: bootstrap-kubeadm
       control-plane: controller-manager
   policyTypes:
+  - Ingress
   - Egress
