Chart: Reorder network policy ports.

--- a/helm/cluster-api/templates/delete-aggregated-roles/networkpolicy.yaml
+++ b/helm/cluster-api/templates/delete-aggregated-roles/networkpolicy.yaml
@@ -26,7 +26,7 @@ spec:
   - Egress
   egress:
   - ports:
-    - port: 443
-      protocol: TCP
-    - port: 6443
-      protocol: TCP
+    - protocol: TCP
+      port: 443
+    - protocol: TCP
+      port: 6443
