--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
@@ -43,7 +43,8 @@ spec:
             weight: 10
       containers:
       - args:
-        - --metrics-bind-addr=0.0.0.0:8080
+        - --diagnostics-address=0.0.0.0:8080
+        - --insecure-diagnostics
         - --feature-gates=ClusterTopology=true,KubeadmBootstrapFormatIgnition=true
         - --watch-filter={{ .Values.watchFilter }}
         - --v=0
